@@ -1,3 +1,8 @@
+2011-01-31  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/47463
+	* gfortran.dg/typebound_assignment_1.f03: New.
+
 2011-01-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/47538
